Make the file issue link not full-width on small screens

--- a/standard.css
+++ b/standard.css
@@ -18,11 +18,22 @@ body { margin: 0 auto; padding: 0 1.5em 2em 2.5em; max-width: 80em; background: 
   pre:hover :link, pre:hover :visited { text-decoration: underline; }
 }
 
+.selected-text-file-an-issue {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.8);
+  font-size: smaller;
+  padding: 4px 10px;
+  z-index: 1;
+  text-decoration: underline;
+}
+
 @media (max-width: 767px) {
   html { background: #fff; tab-size: 2; }
   body { max-width: none; padding: 0 0.625em; }
   pre, code, a { word-wrap: break-word; }
-  .selected-text-file-an-issue { left: 0; text-align: left; }
+  .selected-text-file-an-issue { left: 0; right: auto; text-align: left; }
 }
 
 code { color: #666666; }
@@ -310,17 +321,6 @@ body.dfnEnabled dfn, body.dfnEnabled h2[data-dfn-type], body.dfnEnabled h3[data-
 .dfnPanel p:not(.spec-link) { font-weight: bolder; }
 .dfnPanel * + p { margin-top: 0.25em; }
 .dfnPanel li { list-style-position: inside; }
-
-.selected-text-file-an-issue {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  background: rgba(255, 255, 255, 0.8);
-  font-size: smaller;
-  padding: 4px 10px;
-  z-index: 1;
-  text-decoration: underline;
-}
 
 @media print {
   html { font-size: 8pt; }
